--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    </form>
 <div class="divider">
    <hr>
-   <img src="images/icon-arrow.svg" alt="dropdown" class="calculate">
+   <button><img src="images/icon-arrow.svg" alt="dropdown" class="calculate"></button>
 </div>
     <div class="answer">
         
