--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 </div>
     <div class="answer">
         
-            <p id="years"><span>--</span> years</p>
-            <p id="months"><span>--</span> months</p>
-            <p id="days"><span>--</span> days</p>
+            <p id="years"><span id="span">--</span> years</p>
+            <p id="months"><span  id="months-span">--</span> months</p>
+            <p id="days"><span  id="days-span">--</span> days</p>
         
     </div>
 </div>
